<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/result_raw_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="Command raw result" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/result_raw_text"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="Command result" />


    <!--<Button-->
        <!--android:id="@+id/wifi_enable"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/result_text"-->
        <!--android:text="@string/wifi_connect" />-->

    <!--<Button-->
        <!--android:id="@+id/wifi_search"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/result_text"-->
        <!--android:text="@string/wifi_devices" />-->
    <Button
        android:id="@+id/vinNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_text"
        android:text="@string/getVinNo" />

    <Button
        android:id="@+id/throttlePos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/vinNo"
        android:layout_toRightOf="@+id/vinNo"
        android:layout_below="@id/result_text"
        android:text="@string/throttlePos" />

    <Button
        android:id="@+id/currVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/throttlePos"
        android:layout_toRightOf="@+id/throttlePos"
        android:layout_below="@id/result_text"
        android:text="@string/currVoltage" />

    <Button
        android:id="@+id/waterTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/currVoltage"
        android:layout_toRightOf="@+id/currVoltage"
        android:layout_below="@id/result_text"
        android:text="@string/waterTemp" />

    <Button
        android:id="@+id/rpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vinNo"
        android:text="@string/rpm" />
    <!-- ==================== more commands for testing ====================== -->

    <Button
        android:id="@+id/timingAdvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/rpm"
        android:layout_toRightOf="@+id/rpm"
        android:layout_below="@id/vinNo"
        android:text="@string/timingAdvance" />

    <Button
        android:id="@+id/engineLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/timingAdvance"
        android:layout_toRightOf="@+id/timingAdvance"
        android:layout_below="@id/vinNo"
        android:text="@string/load" />

    <Button
        android:id="@+id/absEngLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/engineLoad"
        android:layout_toRightOf="@+id/engineLoad"
        android:layout_below="@id/vinNo"
        android:text="@string/absLoad" />

    <!-- ==================== more commands for testing ====================== -->


    <Button
        android:id="@+id/maf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rpm"
        android:text="@string/maf" />

    <Button
        android:id="@+id/lambda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/maf"
        android:layout_toRightOf="@+id/maf"
        android:layout_below="@id/rpm"
        android:text="@string/lambda" />

    <Button
        android:id="@+id/fuelType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/lambda"
        android:layout_toRightOf="@+id/lambda"
        android:layout_below="@id/rpm"
        android:text="@string/fuelType" />

    <Button
        android:id="@+id/fuelLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fuelType"
        android:layout_toRightOf="@+id/fuelType"
        android:layout_below="@id/rpm"
        android:text="@string/fuelLevel" />

    <!--====================================================-->


    <Button
        android:id="@+id/vehicleSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maf"
        android:text="@string/vehicleSpeed" />


    <!--<ListView-->
        <!--android:id="@+id/wifi_networks_listView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@color/colorPrimary" />-->
</RelativeLayout>